--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0-239.0.dev <3.0.0"
+  sdk: '>=2.15.1 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   json_annotation: ^4.6.0
   http: ^0.13.5
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
